--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -28,4 +28,15 @@
         
     }
 
+    .avatar-img{
+        width: 30px;
+        height: 30px;
+        border-radius: 50%;
+        margin-right: 10px;
+    }
+    .nav-menu{
+        display: flex;
+        align-items: center;
+    }
+
 }
