--- a/src/app/components/tweet-card/tweet-card.component.scss
+++ b/src/app/components/tweet-card/tweet-card.component.scss
@@ -1,10 +1,51 @@
-.tweet-card{
-    display: block;
-    padding: 20px;
-    margin: 10px;
-    border: 1px solid slategray;
+.tweet-card {
+  display: block;
+  padding: 20px;
+  margin: 10px;
+  box-shadow: 0 0 4px rgb(56, 56, 56);
 
-    hr{
-        margin: 15px 0;
-    }
+  hr {
+    margin: 15px 0;
+  }
+
+  .tweet-header {
+    display: flex;
+    align-items: center;
+  }
+
+  .tweet-username {
+    font-weight: 700;
+    font-size: 16px;
+    padding: 0 10px;
+    border-right: 1px solid slategray;
+  }
+
+  .tweet-email {
+    font-weight: 300;
+    font-size: 12px;
+    padding: 0 10px;
+    color: dimgray;
+  }
+
+  .avatar-img {
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    margin-right: 10px;
+  }
+
+  .tweet-date {
+    font-size: 12px;
+    text-align: right;
+  }
+
+  .tweet-text {
+    margin-bottom: 15px;
+    color: dimgray;
+  }
+
+  .tweet-reply{
+    margin-bottom: 15px;
+    color: rgb(145, 145, 145);
+  }
 }
