--- a/src/app/components/tweet-card/tweet-card.component.html
+++ b/src/app/components/tweet-card/tweet-card.component.html
@@ -22,6 +22,13 @@
     <hr />
    <div class="tweet-content">
     <p class="tweet-text">{{ tweet.text }}</p>
+    <div  class="tweet-images" *ngIf ="tweet.image">
+      <img
+       class="tweet-image"
+       *ngFor = "let img of tweet.image" 
+       [src]="'http://localhost:1337'+ img.url" 
+       alt="">
+    </div>
     <p class="tweet-date"> {{ tweet.created_at | date: "dd/MM/yyyy" }} </p>
    </div>
   </div>
