--- a/src/app/components/tweet-card/tweet-card.component.scss
+++ b/src/app/components/tweet-card/tweet-card.component.scss
@@ -62,3 +62,10 @@
     }
   }
 }
+
+.tweet-actions{
+  display: flex;
+  margin-top: 30px;
+  justify-content: flex-start;
+  align-items: center;
+}
