--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -20,3 +20,9 @@
         object-fit: cover;
     }
 }
+
+.actions{
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+}
