--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,43 +1,76 @@
 /* You can add global styles to this file, and also import other style files */
-*,*::after,*::before{
-    margin: 0;
+*,
+*::after,
+*::before {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: Helvetica;
+}
+
+a {
+  text-decoration: none;
+  color: black;
+}
+
+.container {
+  max-width: 960px;
+  margin: auto;
+}
+
+.form-control {
+  margin: 10px;
+
+  textarea {
+    width: 100%;
+    margin-top: 10px;
+    resize: none;
+    padding: 10px 5px;
+  }
+}
+
+.btn {
+  border-radius: 4px;
+  margin: 4px;
+  background-color: transparent;
+  color: rgb(109, 0, 143);
+  transition: 200ms ease-in-out;
+  border: 1px solid rgb(109, 0, 143);
+  padding: 10px 20px;
+  cursor: pointer;
+
+  &:hover {
+    background-color: darken(slateblue, 10%);
+  }
+
+  &.icon{
+    outline: none;
+    border-radius: 50%;
+    width: 38px;
+    height: 38px;
     padding: 0;
-    box-sizing: border-box;
-    font-family: Arial, Helvetica, sans-serif;
-}
-
-a{
-    text-decoration: none;
-    color: black;
-}
-
-.container{
-   max-width: 960px; 
-   margin: auto;
-}
-
-.form-control{
-    margin: 10px;
-
-    textarea{
-        width: 100%;
-        margin-top: 10px;
-        resize: none;
-        padding: 10px 5px;
-    }
-}
-
-.btn{
-    border-radius: 4px;
     margin: 4px;
-    background-color: slateblue;
-    color: snow;
-    transition: 200ms ease-in-out;
-    border: none;
-    padding: 10px 20px;
-    cursor: pointer;
+  }
 
-    &:hover {
-        background-color: darken(slateblue, 10%);
-    }
+  
+ &.btn-danger {
+  background-color: rgb(247, 0, 0);
+  color: rgb(255, 255, 255);
+  border:  1px solid rgb(247, 0, 0);
+
+  &:hover {
+    background-color: darken($color: rgb(247, 0, 0), $amount: 10%);
+  }
+}
+
+}
+
+.btn-secondary {
+  background-color: rgb(130, 216, 0);
+  color: rgb(26, 26, 26);
+  border: 1px solid rgb(130, 216, 0);
+
+  &:hover {
+    background-color: darken($color: rgb(130, 216, 0), $amount: 5%);
+  }
 }
